[package]
name = "decision_tree"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
